# Real-time-Job-recommendation-system---MCP

./: Dockerfile  README.md
docs/: ARCHITECTURE.md
job/job/: PUSH_INSTRUCTIONS.md  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
job/job/src/: config.py  helper.py  job_api.py
job/job/tests/: test_config.py  test_helper.py
tests/: __init__.py  conftest.py  test_job_api.py
